--- a/analysis/trendfiltering.ipynb
+++ b/analysis/trendfiltering.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -408,6 +408,177 @@
    "source": [
     "trendfiltering_check(8,1)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "def trendfiltering_inverse(n, k):\n",
+    "    '''\n",
+    "    Returns the inverse of the trendfiltering basis matrix H', where\n",
+    "        bhat = argmin ||y - b||^2 + \\lambda ||H'b||\n",
+    "    This is a faster implementation without any dot product.\n",
+    "    Check output with trendfiltering_inverse_check(n, k).\n",
+    "    See proof of Lemma 2 in Supplementary.\n",
+    "    '''\n",
+    "    Hinv = np.zeros((n, n))\n",
+    "    for i in range(2):\n",
+    "        Hinv[i, i] = 1\n",
+    "    for i in range(1, k + 2):\n",
+    "        Hinv[i, :i+2] = Hinv[i, :i+2] - Hinv[i-1, :i+2]\n",
+    "        Hinv[i+1, 1:i+3] = Hinv[i, :i+2]\n",
+    "    for j in range(1, n-k-2):\n",
+    "        irow = i + j + 1\n",
+    "        Hinv[irow, j+1:j+k+3] = Hinv[i, :k+2]\n",
+    "    return Hinv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.],\n",
+       "       [-1.,  1.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.],\n",
+       "       [ 1., -2.,  1.,  0.,  0.,  0.,  0.,  0.,  0.,  0.],\n",
+       "       [-1.,  3., -3.,  1.,  0.,  0.,  0.,  0.,  0.,  0.],\n",
+       "       [ 0., -1.,  3., -3.,  1.,  0.,  0.,  0.,  0.,  0.],\n",
+       "       [ 0.,  0., -1.,  3., -3.,  1.,  0.,  0.,  0.,  0.],\n",
+       "       [ 0.,  0.,  0., -1.,  3., -3.,  1.,  0.,  0.,  0.],\n",
+       "       [ 0.,  0.,  0.,  0., -1.,  3., -3.,  1.,  0.,  0.],\n",
+       "       [ 0.,  0.,  0.,  0.,  0., -1.,  3., -3.,  1.,  0.],\n",
+       "       [ 0.,  0.,  0.,  0.,  0.,  0., -1.,  3., -3.,  1.]])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "trendfiltering_inverse(10,2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[  1.,   0.,   0., ...,   0.,   0.,   0.],\n",
+       "       [  1.,   1.,   0., ...,   0.,   0.,   0.],\n",
+       "       [  1.,   2.,   1., ...,   0.,   0.,   0.],\n",
+       "       ...,\n",
+       "       [  1., 997., 996., ...,   1.,   0.,   0.],\n",
+       "       [  1., 998., 997., ...,   2.,   1.,   0.],\n",
+       "       [  1., 999., 998., ...,   3.,   2.,   1.]])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "trendfiltering(1000,1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[array([1., 1., 1., 1., 1., 1., 1., 1., 1., 1.]),\n",
+       " array([1., 1., 1., 1., 1., 1., 1., 1., 1., 1.])]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n = 10\n",
+    "k = 1\n",
+    "A = list([np.ones(n) for i in range(k + 1)])\n",
+    "A"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "       [1., 1., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "       [1., 1., 1., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "       [1., 1., 1., 1., 0., 0., 0., 0., 0., 0.],\n",
+       "       [1., 1., 1., 1., 1., 0., 0., 0., 0., 0.],\n",
+       "       [1., 1., 1., 1., 1., 1., 0., 0., 0., 0.],\n",
+       "       [1., 1., 1., 1., 1., 1., 1., 0., 0., 0.],\n",
+       "       [1., 1., 1., 1., 1., 1., 1., 1., 0., 0.],\n",
+       "       [1., 1., 1., 1., 1., 1., 1., 1., 1., 0.],\n",
+       "       [1., 1., 1., 1., 1., 1., 1., 1., 1., 1.]])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "trendfiltering(10,0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[  1.,   0.,   0.,   0.,   0.,   0.,   0.,   0.,   0.,   0.],\n",
+       "       [  1.,   1.,   0.,   0.,   0.,   0.,   0.,   0.,   0.,   0.],\n",
+       "       [  1.,   2.,   1.,   0.,   0.,   0.,   0.,   0.,   0.,   0.],\n",
+       "       [  1.,   3.,   3.,   1.,   0.,   0.,   0.,   0.,   0.,   0.],\n",
+       "       [  1.,   4.,   6.,   4.,   1.,   0.,   0.,   0.,   0.,   0.],\n",
+       "       [  1.,   5.,  10.,  10.,   5.,   1.,   0.,   0.,   0.,   0.],\n",
+       "       [  1.,   6.,  15.,  20.,  15.,   6.,   1.,   0.,   0.,   0.],\n",
+       "       [  1.,   7.,  21.,  35.,  35.,  21.,   6.,   1.,   0.,   0.],\n",
+       "       [  1.,   8.,  28.,  56.,  70.,  56.,  21.,   6.,   1.,   0.],\n",
+       "       [  1.,   9.,  36.,  84., 126., 126.,  56.,  21.,   6.,   1.]])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "trendfiltering(10,5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
