--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -14,6 +14,7 @@ editor_options:
 * [PMF splitting simulation](PMF_splitting_simulation.html)
 * [Negative Binomial and Poisson log-normal mean-var relationship](NB_PLN_mean_var.html)
 * [run PMF on PBMC data](run_PMF_on_pbmc.html)
+* [run PMF on droplet data](run_PMF_on_droplet.html)
 
 ## Normal mean penalty form
 
