--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -13,8 +13,12 @@ editor_options:
 * [Splitting method in PMF](PMF_splitting.html)
 * [PMF splitting simulation](PMF_splitting_simulation.html)
 * [Negative Binomial and Poisson log-normal mean-var relationship](NB_PLN_mean_var.html)
+* [run PMF on PBMC data, 3 cell types](run_PMF_on_pbmc_3cells.html)
 * [run PMF on PBMC data](run_PMF_on_pbmc.html)
 * [run PMF on droplet data](run_PMF_on_droplet.html)
+* [library size distribution](library_size_distribution.html)
+* [mean variance relationship in real single cell data](mean_var_relationship_in_real_sc_data.html)
+* [Simulation based on PBMC data, 3 cell types](simulation_based_on_pbmc_3cell.html)
 
 ## Normal mean penalty form
 
