--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -19,6 +19,7 @@ editor_options:
 * [library size distribution](library_size_distribution.html)
 * [mean variance relationship in real single cell data](mean_var_relationship_in_real_sc_data.html)
 * [Simulation based on PBMC data, 3 cell types](simulation_based_on_pbmc_3cell.html)
+* [Simulation based on PBMC data, 3 cell types, 1 init backfitting](splitting_PMF_1backfitinit.html)
 
 ## Normal mean penalty form
 
