--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -14,7 +14,11 @@ editor_options:
 * [PMF splitting simulation](PMF_splitting_simulation.html)
 * [Negative Binomial and Poisson log-normal mean-var relationship](NB_PLN_mean_var.html)
 * [run PMF on PBMC data, 3 cell types](run_PMF_on_pbmc_3cells.html)
+* [run PMF on PBMC data, 3 cell types, nonnegative loadings](run_PMF_on_pbmc_3cells_nonnegativeL.html)
+* [run PMF on PBMC data, 3 cell types, nonnegative loadings and factors](run_PMF_on_pbmc_3cells_nonnegativeLF.html)
 * [run PMF on PBMC data](run_PMF_on_pbmc.html)
+* [run PMF on PBMC data,nonnegative Loadings](run_PMF_on_pbmc_nonnegativeL.html)
+* [run PMF on PBMC data,nonnegative Loadings and factors](run_PMF_on_pbmc_nonnegativeLF.html)
 * [run PMF on droplet data](run_PMF_on_droplet.html)
 * [library size distribution](library_size_distribution.html)
 * [mean variance relationship in real single cell data](mean_var_relationship_in_real_sc_data.html)
