--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -10,9 +10,22 @@ editor_options:
 
 ## Poisson Matrix Factorization
 
+
+### Analysis
+
+* [Negative Binomial and Poisson log-normal mean-var relationship](NB_PLN_mean_var.html)
+* [mean variance relationship in real single cell data](mean_var_relationship_in_real_sc_data.html)
+* [attempt to reduce run time](attempt_to_speed_up_add_greedy.html)
+
+### Simulation 
+
 * [Splitting method in PMF](PMF_splitting.html)
 * [PMF splitting simulation](PMF_splitting_simulation.html)
-* [Negative Binomial and Poisson log-normal mean-var relationship](NB_PLN_mean_var.html)
+* [Simulation based on PBMC data, 3 cell types](simulation_based_on_pbmc_3cell.html)
+* [Simulation based on PBMC data, 3 cell types, 1 init backfitting](splitting_PMF_1backfitinit.html)
+
+### On real dataset
+
 * [run PMF on PBMC data, 3 cell types](run_PMF_on_pbmc_3cells.html)
 * [run PMF on PBMC data, 3 cell types, nonnegative loadings](run_PMF_on_pbmc_3cells_nonnegativeL_more_iterations.html)
 * [run PMF on PBMC data, 3 cell types, nonnegative loadings and factors](run_PMF_on_pbmc_3cells_nonnegativeLF_more_iterations.html)
@@ -21,9 +34,6 @@ editor_options:
 * [run PMF on PBMC data,nonnegative Loadings and factors](run_PMF_on_pbmc_nonnegativeLF_more_iterations.html)
 * [run PMF on droplet data](run_PMF_on_droplet.html)
 * [library size distribution](library_size_distribution.html)
-* [mean variance relationship in real single cell data](mean_var_relationship_in_real_sc_data.html)
-* [Simulation based on PBMC data, 3 cell types](simulation_based_on_pbmc_3cell.html)
-* [Simulation based on PBMC data, 3 cell types, 1 init backfitting](splitting_PMF_1backfitinit.html)
 
 ## Normal mean penalty form
 
