--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -57,6 +57,7 @@ editor_options:
 * [NB PG augmentation](neg_binom_mean_polya_gamma.html)
 * [NB approxiamation to Poisson](nb_approx_poisson.html)
 * [Poisson mean $\log(1+\exp(\cdot))$ link](pois_mean_log1exp.html)
+* [VGA objective function v(m) relationship](vga_objective_function.html)
 
 ### Penalized
 
