--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -87,6 +87,10 @@ With Run time Comparison:
 
 * [The two step procedure for smoothing overdispersed count data](poisson_nugget_two_step.html)
 
+### Real data
+
+* [Smooth RNA seq](splitting_smooth_RNAseq.html)
+
 ### Bechmarking smoothing methods
 
 I benchmarked methods on the following smooth functions.
